Add --add-opens java.base/java.lang=ALL-UNNAMED